[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smokehound"
version = "0.1.0"
description = "Network diagnostics collector and visualizer for characterizing intermittent WiFi/internet issues"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SmokеHound Contributors" }]
keywords = ["network", "diagnostics", "wifi", "monitoring", "latency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "plotly>=5.18",
    "aiohttp>=3.9",
    "aiodns>=3.1",
    "dnspython>=2.4",
    "tomllib; python_version < '3.11'",
    "tomli-w>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "build",
]
speedtest = [
    "speedtest-cli>=2.1",
]

[project.scripts]
smokehound = "smokehound.cli:main"

[project.urls]
Homepage = "https://github.com/smokehound/smokehound"
Repository = "https://github.com/smokehound/smokehound"
Issues = "https://github.com/smokehound/smokehound/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/smokehound"]
omit = ["tests/*"]
